<resources>
    <string name="app_name">Bookly</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="textSplashScreen">Developed by Adria Altemir</string>
    <string name="title_activity_login_activty">LoginActivty</string>
    <string name="Email">Introduce email</string>
    <string name="Password">Introduce password</string>
    <string name="PasswordRepeat">Repite password</string>
    <string name="Login">Log-in</string>
    <string name="backToRegistratio">Volver a registrar</string>
    <string name="alreadyLogin"> Ya tienes cuenta?</string>
    <string name="Register">Registrar</string>
    <string name="UserName">Nombre Usuario</string>
    <string name="buttonImg">Selecciona imagen</string>
    <string name="introduce_nombre_de_biblioteca">Introduce nombre de la Biblioteca</string>
    <string name="escribe_nombre_biblioteca">Escribe nombre Biblioteca</string>
    <string name="a_adir">Añadir</string>
    <string name="cancelar">Cancelar</string>
    <string name="introduce_nombre_de_cajon">Introduce nombre de cajon</string>
    <string name="escribe_nombre_cajon">Escribe nombre cajon</string>
    <string name="Que_desea_hacer">Que desea hacer?</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Estassegurodeborrar">Estas seguro de borrar la biblioteca ?</string>
    <string name="Borrar">Borrar</string>
    <string name="update">Update</string>
    <string name="Estassegurodeborrarcajon">Estas seguro de borrar el cajon?</string>
    <string name="editorial">Editorial</string>
    <string name="title">Titulo</string>
    <string name="RegisterComplete">Successfully registered</string>
    <string name="Nointernet">No tienes internet</string>
    <string name="Autor">Autor</string>
    <string name="ISBN">ISBN</string>
    <string name="location"><u><b>UBICACION</b></u></string>
    <string name="IsbnValido">ISBN valido</string>
    <string name="isbn">ISBN:</string>
    <string name="autor">Autor:</string>
    <string name="editorialBook">Editorial:</string>
    <string name="titol">Titulo:</string>
    <string name="add">Añadir</string>
    <string name="textview">TextView</string>
    <string name="titolBookClicked">Titulo</string>
    <string name="IntroduzcaCampos">Por favor introduzca los campos</string>
    <string name="EditorialMalIntroducido">Nombre de Editorial mal introducido</string>
    <string name="IsbnRepetido">ISBN repetido</string>
    <string name="IsbnMalIntroducido">ISBN mal introducido</string>
    <string name="IntroduzcaNombre">Por favor introduzca un nombre</string>
    <string name="NombreRepetido">Nombre repetido</string>
    <string name="Bibliotecas">Biliotecas</string>
    <string name="NingunLibro">Ningun libro encontrado</string>
    <string name="BibliotecaRuta">Biblioteca:</string>
    <string name="CajonRuta">Cajon:</string>
    <string name="IntroduceMail">Introduce email</string>
    <string name="IntroducePassword">Introduce password</string>
    <string name="Logedin">Logeado exitoso</string>
    <string name="EmailPassIncorrectos">Email o password incorrectos</string>
    <string name="SeleccioneImagen">Seleccione imagen</string>
    <string name="passwordsDiferentes">Contraseñas diferentes</string>
    <string name="IntroduzcaPassword">Introduzca contraseña</string>
    <string name="Introduzcamailvalido">Introduzca mail valido</string>
    <string name="NombreUsuario">Introduzca nombre de usuario</string>
    <string name="PasswordShort">La contraseña tiene que ser como minimo 6 caracteres</string>
    <string name="AlreadyRegisteredMail">El mail ya esta registrado</string>
    <string name="ElementoBorrado">Elemento borrado correctamente</string>
    <string name="NombreValido">Porfavor introduzca un nombre valido</string>
    <string name="TituloMalIntroducido">Nombre del Titulo mal introducido</string>
    <string name="EditorialMalIntroducida">Nombre de Editorial mal introducido</string>
    <string name="AutorMalIntroducido">Nombre de Autor mal introducido</string>
    <string name="IntroduzcaLosCampos">Por favor introduzca los campos</string>
    <string name="ScanFailed">Scan fallido</string>
    <string name="titulo">Titulo:</string>
    <string name="introduce_isbn">ISBN o Titulo</string>
    <string name="buscar">Buscar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
